--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -49,7 +49,7 @@
                                 <a href="checkout.html" class="dropdown-item">Ödemeler</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">İletişim</a>
+                        <a href="contact.html" class="nav-item nav-link">İletişim</a>
                     </div>
                     <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
                         <a href="" class="btn px-0">
