--- a/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
@@ -17,3 +17,4 @@
 
 @await Component.InvokeAsync("_CarouselDefaultComponentPartial")
 @await Component.InvokeAsync("_FeatureDefaultComponentPartial")
+@await Component.InvokeAsync("_CategoriesDefaultComponentPartial")
