--- a/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
@@ -16,5 +16,9 @@
 </div>
 
 @await Component.InvokeAsync("_CarouselDefaultComponentPartial")
+
 @await Component.InvokeAsync("_FeatureDefaultComponentPartial")
+
 @await Component.InvokeAsync("_CategoriesDefaultComponentPartial")
+
+@await Component.InvokeAsync("_FeatureProductsDefaultComponentPartial")
