--- a/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
@@ -22,3 +22,5 @@
 @await Component.InvokeAsync("_CategoriesDefaultComponentPartial")
 
 @await Component.InvokeAsync("_FeatureProductsDefaultComponentPartial")
+
+@await Component.InvokeAsync("_OfferDiscountDefaultComponentPartial")
