--- a/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Default/Index.cshtml
@@ -24,3 +24,5 @@
 @await Component.InvokeAsync("_FeatureProductsDefaultComponentPartial")
 
 @await Component.InvokeAsync("_OfferDiscountDefaultComponentPartial")
+
+@await Component.InvokeAsync("_VendorDefaultComponentPartial")
