--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductListColorFilterComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductListColorFilterComponentPartial/Default.cshtml
@@ -1,35 +1,35 @@
-﻿<h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Fiyata Göre Filtrele</span></h5>
+﻿<h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Renge Göre Filtrele</span></h5>
 
 <div class="bg-light p-4 mb-30">
     <form>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-            <input type="checkbox" class="custom-control-input" checked id="price-all">
-            <label class="custom-control-label" for="price-all">Tüm Fiyatlar</label>
+            <input type="checkbox" class="custom-control-input" checked id="color-all">
+            <label class="custom-control-label" for="price-all">Tüm Renkler</label>
             <span class="badge border font-weight-normal">1000</span>
         </div>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-            <input type="checkbox" class="custom-control-input" id="price-1">
-            <label class="custom-control-label" for="price-1">$0 - $100</label>
+            <input type="checkbox" class="custom-control-input" id="color-1">
+            <label class="custom-control-label" for="color-1">Black</label>
             <span class="badge border font-weight-normal">150</span>
         </div>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-            <input type="checkbox" class="custom-control-input" id="price-2">
-            <label class="custom-control-label" for="price-2">$100 - $200</label>
+            <input type="checkbox" class="custom-control-input" id="color-2">
+            <label class="custom-control-label" for="color-2">White</label>
             <span class="badge border font-weight-normal">295</span>
         </div>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-            <input type="checkbox" class="custom-control-input" id="price-3">
-            <label class="custom-control-label" for="price-3">$200 - $300</label>
+            <input type="checkbox" class="custom-control-input" id="color-3">
+            <label class="custom-control-label" for="color-3">Red</label>
             <span class="badge border font-weight-normal">246</span>
         </div>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-            <input type="checkbox" class="custom-control-input" id="price-4">
-            <label class="custom-control-label" for="price-4">$300 - $400</label>
+            <input type="checkbox" class="custom-control-input" id="color-4">
+            <label class="custom-control-label" for="color-4">Blue</label>
             <span class="badge border font-weight-normal">145</span>
         </div>
         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-            <input type="checkbox" class="custom-control-input" id="price-5">
-            <label class="custom-control-label" for="price-5">$400 - $500</label>
+            <input type="checkbox" class="custom-control-input" id="color-5">
+            <label class="custom-control-label" for="color-5">Green</label>
             <span class="badge border font-weight-normal">168</span>
         </div>
     </form>
