--- a/Frontends/MultiShop.WebUI/Views/ProductList/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ProductList/Index.cshtml
@@ -9,9 +9,9 @@
     <div class="row px-xl-5">
         <div class="col-12">
             <nav class="breadcrumb bg-light mb-30">
-                <a class="breadcrumb-item text-dark" href="#">Home</a>
-                <a class="breadcrumb-item text-dark" href="#">Shop</a>
-                <span class="breadcrumb-item active">Shop List</span>
+                <a class="breadcrumb-item text-dark" href="#">Ana Sayfa</a>
+                <a class="breadcrumb-item text-dark" href="#">Ürünler</a>
+                <span class="breadcrumb-item active">Ürün Listesi</span>
             </nav>
         </div>
     </div>
@@ -47,17 +47,8 @@
                 
                 @await Component.InvokeAsync("_ProductListComponentPartial")
                 
-                <div class="col-12">
-                    <nav>
-                        <ul class="pagination justify-content-center">
-                            <li class="page-item disabled"><a class="page-link" href="#">Previous</span></a></li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                @await Component.InvokeAsync("_ProductListPaginationComponentPartial")
+
             </div>
         </div>
         <!-- Shop Product End -->
