--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/AdminLayout/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/AdminLayout/Index.cshtml
@@ -5,26 +5,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ovio -  Bootstrap Based Responsive Dashboard &amp; Admin Template</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/bootstrap/css/bootstrap.min.css">
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-
-    <!-- Template style -->
-    <link rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/dist/css/style.css">
-    <link rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/tables/et-line-font/et-line-font.css">
-    <link rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/tables/font-awesome/css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/dist/weather/weather-icons.min.css">
-    <link type="text/css" rel="stylesheet" href="~/MainDownload-OvioAdmin-html5-template/html/dist/weather/weather-icons-wind.min.css">
-</head>
+@await Component.InvokeAsync("_AdminLayoutHeadComponentPartial")
 
 <body class="sidebar-mini">
     <div class="wrapper">
