--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -38,7 +38,7 @@
                             }
                         </tbody>
                     </table>
-                    <a href="#" class="btn btn-success">Yeni Kategori Girişi</a>
+                    <a href="/Admin/Category/CreateCategory" class="btn btn-success">Yeni Kategori Girişi</a>
                 </div>
             </div>
         </div>
