--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -32,7 +32,7 @@
                                     <th scope="row">@count</th>
                                     <td>@item.CategoryName</td>
                                     <td><a href="#" class="btn btn-warning">Kategoriye Ait Ürünler</a></td>
-                                    <td><a href="#" class="btn btn-danger">Sil</a></td>
+                                    <td><a href="/Admin/Category/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
                                     <td><a href="#" class="btn btn-primary">Güncelle</a></td>
                                 </tr>
                             }
