--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -33,7 +33,7 @@
                                     <td>@item.CategoryName</td>
                                     <td><a href="#" class="btn btn-warning">Kategoriye Ait Ürünler</a></td>
                                     <td><a href="/Admin/Category/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
-                                    <td><a href="#" class="btn btn-primary">Güncelle</a></td>
+                                    <td><a href="/Admin/Category/UpdateCategory/@item.CategoryID" class="btn btn-primary">Güncelle</a></td>
                                 </tr>
                             }
                         </tbody>
