--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Product/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Product/Index.cshtml
@@ -1,5 +1,5 @@
-﻿
-@model List<ResultCategoryDto>
+﻿@using MultiShop.DtoLayer.CatalogDtos.ProductDtos
+@model List<ResultProductDto>
 
 @{
     ViewData["Title"] = "Index";
@@ -11,14 +11,13 @@
     <div class="row">
         <div class="col-md-12">
             <div class="chart-box">
-                <h4>Kategori Listesi</h4>
-                <p>Kategori ile ilgili işlemlerinizi aşağıdaki panelden gerçekleştirebilirsiniz.</p>
                 <div class="bs-example" data-example-id="bordered-table">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>Kategori Adı</th>
+                                <th>Ürün Adı</th>
+                                <th>Ürün Fiyatı</th>
                                 <th>Sil</th>
                                 <th>Güncelle</th>
                             </tr>
@@ -29,14 +28,15 @@
                                 count++;
                                 <tr>
                                     <th scope="row">@count</th>
-                                    <td>@item.CategoryName</td>
-                                    <td><a href="/Admin/Category/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
-                                    <td><a href="/Admin/Category/UpdateCategory/@item.CategoryID" class="btn btn-primary">Güncelle</a></td>
+                                    <td>@item.ProductName</td>
+                                    <td>@item.ProductPrice</td>
+                                    <td><a href="/Admin/Product/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
+                                    <td><a href="/Admin/Product/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
                                 </tr>
                             }
                         </tbody>
                     </table>
-                    <a href="/Admin/Category/CreateCategory" class="btn btn-success">Yeni Kategori Girişi</a>
+                    <a href="/Admin/Product/CreateProduct/" class="btn btn-primary">Yeni Ürün Girişi</a>
                 </div>
             </div>
         </div>
