--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutHeaderComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutHeaderComponentPartial/Default.cshtml
@@ -95,11 +95,11 @@
                 <!-- Tasks Menu -->
                 <!-- User Account Menu -->
                 <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <img src="../dist/img/img1.jpg" class="user-image" alt="User Image"> <span class="hidden-xs">Admin</span> </a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <img src="~/images/logos/manlogo.jpg" class="user-image" alt="User Image"> <span class="hidden-xs">Admin</span> </a>
                     <ul class="dropdown-menu">
                         <li class="user-header">
-                            <div class="pull-left user-img"><img src="~/MainDownload-OvioAdmin-html5-template/html/dist/img/img1.jpg" class="img-responsive" alt="User"></div>
-                            <p class="text-left">Florence Douglas <small>florence@gmail.com</small> </p>
+                            <div class="pull-left user-img"><img src="~/images/logos/manlogo.jpg" class="img-responsive" alt="User"></div>
+                            <p class="text-left">Arda Hanoğlu <small>multishop@gmail.com</small> </p>
                             <div class="view-link text-left"><a href="#">View Profile</a> </div>
                         </li>
                         <li><a href="#"><i class="icon-profile-male"></i> My Profile</a></li>
