--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
@@ -17,9 +17,9 @@
                         <label>Kategory Adı</label>
                         <input type="text" class="form-control" asp-for="CategoryName"/>
                         <br />
-                        @* <label>Kategory Görsel</label>
+                        <label>Kategory Görsel</label>
                         <input type="text" class="form-control" asp-for="ImageUrl" />
-                        <br /> *@
+                        <br />
                         <button class="btn btn-primary">Kategoriyi Ekle</button>
                     </form>
                 </div>
