--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -18,9 +18,9 @@
                         <label>Kategori Adı</label>
                         <input type="text" class="form-control" asp-for="CategoryName" />
                         <br />
-                        @* <label>Kategori Görsel</label>
+                        <label>Kategori Görsel</label>
                         <input type="text" class="form-control" asp-for="ImageUrl" />
-                        <br /> *@
+                        <br />
                         <button class="btn btn-primary">Kategoriyi Güncelle</button>
                     </form>
 
