--- a/Frontends/MultiShop.WebUI/Views/ProductList/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ProductList/Index.cshtml
@@ -45,7 +45,7 @@
 
                 @await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
                 
-                @await Component.InvokeAsync("_ProductListComponentPartial")
+                @await Component.InvokeAsync("_ProductListComponentPartial", new {id=ViewBag.id})
                 
                 @await Component.InvokeAsync("_ProductListPaginationComponentPartial")
 
