--- a/Frontends/MultiShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -19,9 +19,9 @@
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
         
-        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new {id=ViewBag.id})
 
-        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial", new {id=ViewBag.id})
 
     </div>
     <div class="row px-xl-5">
