--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
@@ -1,6 +1,5 @@
 ﻿@using MultiShop.DtoLayer.CatalogDtos.ProductDtos
-@model ResultProductDto
-
+@model UpdateProductDto
 <div class="col-lg-7 h-auto mb-30">
     <div class="h-100 bg-light p-30">
         <h3>@Model.ProductName</h3>
