--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailImageSliderComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailImageSliderComponentPartial/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
-@model ResultProductImageDto
+@model GetByIdProductImageDto
 
 <div class="col-lg-5 mb-30">
     <div id="product-carousel" class="carousel slide" data-ride="carousel">
