--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -34,7 +34,7 @@
             <li><a href="/Admin/Comment/Index/"> <i class="fa fa-picture-o"></i><span>Görseller</span></a></li>
             <li><a href="/Admin/Comment/Index/"> <i class="fa fa-paper-plane"></i><span>Mesajlar</span></a></li>
             <li><a href="/Admin/Comment/Index/"> <i class="fa fa-snowflake-o"></i><span>Ayarlar</span></a></li>
-            <li><a href="/Admin/Comment/Index/"> <i class="fa fa-window-close-o"></i><span>Çıkış Yap</span></a></li>
+            <li><a href="/Admin/Comment/Index/"> <i class="fa fa-window-close"></i><span>Çıkış Yap</span></a></li>
         </ul>
         <!-- sidebar-menu -->
     </section>
